--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
 python-jose==3.3.0
 pydantic==2.9.2
+pydantic-settings==2.6.0
 email-validator==2.2.0
 Jinja2==3.1.4
 python-multipart==0.0.20
