AUTH: Move to PostgreSQL

--- a/.env
+++ b/.env
@@ -4,11 +4,8 @@ AUTH_ALGORITHM=HS256
 AUTH_ACCESS_TOKEN_EXPIRE_MINUTES=60
 AUTH_OTP_EXP_MINUTES=10
 
-# Database
-# SQLite example
-DATABASE_URL=sqlite:///./auth.db
-# MySQL example
-# DATABASE_URL=mysql+pymysql://user:pass@localhost:3306/auth_db
+# Database (PostgreSQL only)
+DATABASE_URL=postgresql+psycopg2://proxima:yvbiofrost@localhost:5432/auth_db
 
 # SMTP (Gmail example)
 SMTP_HOST=smtp.gmail.com
