--- a/.env
+++ b/.env
@@ -1,8 +1,14 @@
-# Core security
+ENV=dev
+
+# Core security (dev-only values; do NOT use in production)
 AUTH_SECRET_KEY=change-me
 AUTH_ALGORITHM=HS256
 AUTH_ACCESS_TOKEN_EXPIRE_MINUTES=60
 AUTH_OTP_EXP_MINUTES=10
+
+# Cookie settings for web auth (dev: allow insecure HTTP, lax same-site)
+AUTH_COOKIE_SECURE=False
+AUTH_COOKIE_SAMESITE=lax
 
 # Database (PostgreSQL only)
 DATABASE_URL=postgresql+psycopg2://proxima:yvbiofrost@localhost:5432/auth_db
